# Proyecto_en_clase_

./: .gitignore  Artista.cpp  Artista.h  CMakeLists.txt  Cronograma.cpp  Cronograma.h  EstrategiaTarea.h  EstrategiaTareaAnimacion.h  EstrategiaTareaSonido.h  Excepcion.h  GestorArchivos.cpp  GestorArchivos.h  GestorRecursos.cpp  GestorRecursos.h  IngenieroDeSonido.cpp  IngenieroDeSonido.h  Lista.cpp  Lista.h  ListaPeliculas.cpp  ListaPeliculas.h  ListaPersonal.cpp  ListaPersonal.h  ListaTareas.cpp  ListaTareas.h  Menu.cpp  Menu.h  Nodo.h  Pelicula.cpp  Pelicula.h  Personal.cpp  Personal.h  Productor.cpp  Productor.h  TareaProduccion.cpp  TareaProduccion.h  Utilities.h  main.cpp
