cmake_minimum_required(VERSION 3.30)
project(Proyecto_en_clase)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyecto_en_clase
        main.cpp
        Artista.cpp
        Cronograma.cpp
        GestorArchivos.cpp
        GestorRecursos.cpp
        IngenieroDeSONido.cpp
        ListaPeliculas.cpp
        ListaPersonal.cpp
        Menu.cpp
        Pelicula.cpp
        Personal.cpp
        Productor.cpp
        TareaProduccion.cpp
        ListaTareas.cpp
        ListaTareas.h)
